vertical alignment of the arrows fixed

--- a/src/components/CategoryTabs/CategoryTabs.module.css
+++ b/src/components/CategoryTabs/CategoryTabs.module.css
@@ -35,6 +35,8 @@
 
 .scrollButtonLeftContainer {
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   width: 30px;
   left: 0;
   z-index: 1010;
@@ -42,6 +44,8 @@
 
 .scrollButtonRightContainer {
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   width: 30px;
   right: 0;
   z-index: 1010;
